Refactor Maven build scripts
Introduced dynamic handling of Maven options and profiles based on environment variables like `DOCKER_REGISTRY` and `GITHUB_REF_NAME`. Removed redundant hardcoded options. Added `.mvn/jvm.config`.